[gd_scene load_steps=7 format=3 uid="uid://c7xdjuymk7qa3"]

[ext_resource type="Script" path="res://Scripts/Levels/game_over_menu.gd" id="1_kehlv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_favyf"]
bg_color = Color(0.482353, 0.666667, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tuls8"]
bg_color = Color(0.6, 0.6, 0.6, 0.627451)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dk1s2"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1smoh"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kier7"]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="GameOverMenu" type="Control"]
custom_minimum_size = Vector2(437, 320)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kehlv")
metadata/_edit_vertical_guides_ = [225.0]

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -14.0
offset_right = 212.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
alignment = 1

[node name="Continue" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_favyf")
theme_override_styles/hover = SubResource("StyleBoxFlat_tuls8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dk1s2")
theme_override_styles/focus = SubResource("StyleBoxFlat_1smoh")
text = "Continue"

[node name="Restart" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_favyf")
theme_override_styles/hover = SubResource("StyleBoxFlat_tuls8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dk1s2")
theme_override_styles/focus = SubResource("StyleBoxFlat_1smoh")
text = "Restart"

[node name="Main menu" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_kier7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dk1s2")
theme_override_styles/focus = SubResource("StyleBoxFlat_1smoh")
text = "Main menu"

[connection signal="button_up" from="Buttons/Continue" to="." method="_on_continue_button_up"]
[connection signal="mouse_entered" from="Buttons/Continue" to="." method="_on_start_mouse_entered"]
[connection signal="button_up" from="Buttons/Restart" to="." method="_on_start_button_up"]
[connection signal="mouse_entered" from="Buttons/Restart" to="." method="_on_start_mouse_entered"]
[connection signal="button_up" from="Buttons/Main menu" to="." method="_on_quit_button_up"]
[connection signal="mouse_entered" from="Buttons/Main menu" to="." method="_on_quit_mouse_entered"]
